--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.layout {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  min-height: 100vh;
+  background: #f8fafc;
 }
 
-.App-link {
-  color: #61dafb;
+.layout > main {
+  display: flex;
+  flex: 1;
+  margin-top: 120px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.main-content {
+  flex: 1;
+  margin-left: 200px;
+  margin-bottom: 60px;
+  padding: 2rem;
+  background: #fff;
+  box-sizing: border-box;
+  overflow-y: auto;
+}
+
+@media (max-width: 800px) {
+  .main-content {
+    margin-left: 0;
   }
 }
